# cpp-encryption-adapter

./: .appveyor.yml  .gitattributes  .travis.yml  CMakeLists.txt  README.md  RELEASENOTES.md  deploy.sh
.github/workflows/: archive-docs.yml
EncryptionAdapterInterface/: IEncryptionAdapter.h  SecurityKey.h  conanfile.py
EncryptionAdapterTestUtilities/: CMakeLists.txt  conanfile.py
EncryptionAdapterTestUtilities/Mocks/: MockEncryptionAdapter.cpp  MockEncryptionAdapter.h
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile
ci/scripts/: deploy.sh
test_package/: CMakeLists.txt  EncryptionAdapterExample.cpp  conanfile.py
